syntax = "proto3";

option go_package = "loms/v1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

service LOMService {
  rpc OrderCreate(OrderCreateRequest) returns (OrderId) {
    option (google.api.http) = {
      post: "/v1/order/create"
      body: "*"
    };
  };
  rpc OrderInfo(OrderId) returns (OrderInfoResponse) {
    option (google.api.http) = {
      get: "/v1/order/{orderID}"
    };
  };
  rpc OrderPay(OrderId) returns (google.protobuf.Empty);
  rpc OrderCancel(OrderId) returns (google.protobuf.Empty);
  rpc StocksInfo(StocksInfoRequest) returns (StocksInfoResponse);
}

message OrderCreateRequest {
  int64 user = 1;
  repeated Item items = 2  [(validate.rules).repeated.min_items = 1];
}

message Item {
  uint32 sku = 1;
  uint32 count = 2 [(validate.rules).uint32.gt = 0];
}

message OrderId {
  int64 orderID = 1;
}

enum OrderStatus {
  ORDER_STATUS_UNDEFINED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_AWAITING_PAYMENT = 2;
  ORDER_STATUS_FAILED = 3;
  ORDER_STATUS_PAYED = 4;
  ORDER_STATUS_CANCELLED = 5;
}

message OrderInfoResponse {
  OrderStatus status = 1 ;
  int64 user = 2;
  repeated Item items = 3;
}

message StocksInfoRequest {
  uint32 sku = 1;
}

message StocksInfoResponse {
  uint64 count = 1;
}